<resources>
    <string name="app_name">RepastTestProject</string>

    <string name="base_url" translatable="false">http://cookit.zenithapps.ru/</string>
    
    <string name="nearby_header">Обзор</string>
    <string name="nearby_sub_header">Рядом с вами</string>
    <string name="nearby_restaurant_not_found_message">Не видите нужное заведение?</string>
    <string name="nearby_qr_button_text">определить по qr</string>
    <string name="restaurant_photo_description">Фото ресторана</string>
    <string name="restaurant_tips_button">Оставить чаевые</string>
    <string name="restaurant_rating_text">%1$s (%2$s)</string>

    <string name="tips_header">Шаг первый</string>
    <string name="tips_sub_header">Выберите понравившегося сотрудника</string>
    <string name="tips_worker_photo_content_description">Фотография сотрудника</string>
    <string name="tips_like_content_description">Добавьте сотрудника в избранные</string>

    <string name="payment_header">Шаг второй</string>
    <string name="payment_sub_header">Укажите сумму чаевых и укажите платежные реквизиты</string>
    <string name="payment_amount_et_hint">Укажите сумму (руб)</string>
    <string name="payment_pay_button_text">Оплатить</string>

    <string name="feedback_header">Спасибо вам!</string>
    <string name="feedback_sub_header">Оцените нашу работу, мы будем рады Вашему мнению!</string>
    <string name="feedback_commentary_hint">Комментарий к оценке</string>
    <string name="feedback_photo_content_description">Фотография сотрудника</string>
    <string name="feedback_button_continue_text">Продолжить</string>
    
    <string-array name="feedback_positive_responses">
        <item>Официант был учтив</item>
        <item>Качественные блюда</item>
        <item>Убранный стол</item>
        <item>Правильный порядок подачи блюд</item>
    </string-array>
    <string name="feedback_positive_question">Что вас устроило?</string>

    <string-array name="feedback_negative_responses">
        <item>Официант был неучтив</item>
        <item>Некачественные блюда</item>
        <item>Неубранный стол</item>
        <item>Нарушение порядка подачи блюд</item>
    </string-array>
    <string name="feedback_negative_question">Что вас не устроило?</string>

    <string-array name="feedback_critique_titles">
        <item>Ужасно</item>
        <item>Плохо</item>
        <item>Средне</item>
        <item>Хорошо</item>
        <item>Отлично</item>
    </string-array>
</resources>
