<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:paddingTop="24dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/nearby_header"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#99000000"
            android:id="@+id/nearby_header"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#99000000"
            android:lineSpacingExtra="4sp"
            android:text="@string/nearby_sub_header"
            android:layout_marginTop="4dp"
            android:layout_below="@id/nearby_header"
            android:id="@+id/nearby_sub_header"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_below="@id/nearby_sub_header"
            android:id="@+id/nearby_rv"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="64dp"
              android:textSize="12sp"
              android:fontFamily="sans-serif"
              android:textStyle="normal"
              android:textColor="#99000000"
              android:lineSpacingExtra="4sp"
              android:layout_below="@id/nearby_rv"
              android:id="@+id/nearby_restaurant_not_found_message"
              android:text="@string/nearby_restaurant_not_found_message"/>
    
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="10dp"
            android:text="@string/nearby_qr_button_text"
            android:layout_centerHorizontal="true"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textColor="#ffffff"
            android:background="#6200ee"
            android:layout_below="@id/nearby_restaurant_not_found_message"
            android:id="@+id/nearby_qr_button"/>
</RelativeLayout>